kubernetes/apps/home/zwave-js-ui/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    gethomepage.dev/description: ZWave Device Management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/icon: sh-z-wave-js-ui
    gethomepage.dev/name: ZWave JS UI
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=zwave-js-ui"
spec:
  hostnames:
    - "zwave.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: ${APP}
          namespace: home
          port: ${APP_PORT}
